Fix sticky hover on mobile

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -81,15 +81,14 @@ main ul li {
   text-underline-offset: 6px;
 }
 
-#links a:hover,
-#links a:active,
-#links a:focus {
-  outline: 0;
-  color: white;
-  text-underline-offset: 6px;
-  text-decoration: underline;
-  transition-duration: 0.3s;
-  -webkit-transition-duration: 0.3s;
+@media (hover: hover) {
+  #links a:hover {
+    outline: 0;
+    color: white;
+    text-underline-offset: 6px;
+    text-decoration: underline;
+    transition: 0.3s;
+  }
 }
 
 #quote {
